update work dir

--- a/config/prefect.yaml
+++ b/config/prefect.yaml
@@ -17,9 +17,9 @@ pull:
 - prefect.deployments.steps.git_clone:
     repository: "https://github.com/CBIIT/ccdi-cpi-etl.git"
     branch: "main"
-    access_token: null
 - prefect.deployments.steps.pip_install_requirements:
     requirements_file: requirements.txt
+    directory: /opt/prefect/ccdi-cpi-etl-main
 # the deployments section allows you to provide configuration for deploying flows
 deployments:
 - name: etl-pipeline
